upgraded springboot from 1.5.x to 2.1.x & enabled http2